--- a/artifacts/examples/crd.yaml
+++ b/artifacts/examples/crd.yaml
@@ -2,8 +2,6 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   name: foos.samplecontroller.k8s.io
-  # for more information on the below annotation, please see
-  # https://github.com/kubernetes/enhancements/blob/master/keps/sig-api-machinery/2337-k8s.io-group-protection/README.md
   annotations:
     "api-approved.kubernetes.io": "unapproved, experimental-only; please get an approval from Kubernetes API reviewers if you're trying to develop a CRD in the *.k8s.io or *.kubernetes.io groups"
 spec:
@@ -13,7 +11,6 @@ spec:
       served: true
       storage: true
       schema:
-        # schema used for validation
         openAPIV3Schema:
           type: object
           properties:
@@ -26,6 +23,10 @@ spec:
                   type: integer
                   minimum: 1
                   maximum: 10
+                IDs:
+                  type: array
+                  items:
+                    type: string
             status:
               type: object
               properties:
