Modify sample-controller to isolate bug with indexers on release-1.27

--- a/artifacts/examples/crd.yaml
+++ b/artifacts/examples/crd.yaml
@@ -26,6 +26,10 @@ spec:
                   type: integer
                   minimum: 1
                   maximum: 10
+                IDs:
+                  type: array
+                  items:
+                    type: string
             status:
               type: object
               properties:
